Fix double scrollbar issue

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -25,8 +25,6 @@
 
 html {
   background: black;
-  overflow-y: scroll;
-  overflow-x: hidden;
   font-family: 'Source Sans Pro';
 }
 
@@ -35,6 +33,7 @@ body {
   line-height: 1.45;
   background: white;
   font-size: 16px;
+  overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
 }
